...
              )),
            if (error.isEmpty == false) const SizedBox(height: 20),
            Center(
              child: SizedBox(
                width: 320.0,
                child: TextFormField(
                  key: const Key("emailAdd"),
                  keyboardType: TextInputType.emailAddress,
                  onChanged: (value) {
                    email = value.toLowerCase();
                  },
                  decoration: const InputDecoration(
                      border: OutlineInputBorder(
...
            ),
            const SizedBox(height: 10),
            Center(
              child: SizedBox(
                width: 320.0,
                child: TextFormField(
                  key: const Key("password"),
                  obscureText: showPassword,
                  onChanged: (value) {
                    password = value.toString();
                  },
                  decoration: InputDecoration(
                      border: const OutlineInputBorder(
...
