...
            //     Navigator.of(context).pushNamed('/home');
            //   },
            // ),
            FloatingActionButton.extended(
              label: const Text('Login'),
              onPressed: () {
                Navigator.of(context).pushNamed('/signin');
              },
            ),

            Row(
              children: <Widget>[
                const Text("Didn't receive an email?"),
...
